src/components/Forms/NewPostForm/NewPostForm.module.css
.form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  border: 1px solid #ececec;
  padding: 2rem 4rem;
  border-radius: 10px;
}
.form__error {
  margin: 0;
  width: 100%;
  color: #a8a8a8;
  text-align: left;
  width: 100%;
}
.form h3 {
  position: relative;
}
.form h3,
.form h4 {
  color: #a8a8a8;
  font-weight: normal;
}
.form h3::after {
  content: '';
  width: 25rem;
  height: 1px;
  background-color: #ececec;
  position: absolute;
  bottom: -0.7rem;
  left: 0;
}
.form__buttons {
  margin-top: 2rem;
  display: flex;
  align-self: end;
  gap: 2rem;
}
.form__buttons a {
  text-decoration: none;
}
.form__button {
  width: 6rem;
}
.number__input {
  width: 14rem;
}
.form__textarea {
  height: 10rem;
}
.form__categories,
.form__levels {
  display: flex;
  gap: 0.6rem;
}
.form__categories {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
}
.form__categories label,
.form__levels label {
  color: #ff6c37;
  padding: 0.5em;
  border: 1px solid #ff6c37;
  border-radius: 10px;
  user-select: none;
  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out,
    opacity 0.3s ease-in-out, transform 0.1s ease-in-out;
}
.form__categories label:hover,
.form__levels label:hover,
.form__categories input:checked + label,
.form__levels input:checked + label {
  background-color: #ff6c37;
  color: white;
}
.form__categories input:checked + label:hover,
.form__levels input:checked + label:hover {
  opacity: 0.5;
}
.form__categories input,
.form__levels input {
  display: none;
}
.form__categories input:active + label,
.form__levels input:active + label {
  transform: scale(0.9);
}
.categories__subcategory {
  display: flex;
  gap: 0.6rem;
  color: #a8a8a8;
  flex-wrap: wrap;
  border: 1px solid #ececec;
  border-radius: 10px;
  padding: 0.7rem;
}
.subcategory__name {
  width: 100%;
  padding: 0;
  margin: 0;
}

/* MOBILE VIEW */

@media screen and (max-width: 680px) {
  .form {
    width: 100%;
    padding: 0;
    border: 0px;
  }
  .form__buttons {
    gap: 1rem;
    justify-content: center;
    flex-direction: column;
    align-self: stretch;
  }
  .form__button {
    width: 90%;
  }
  .form h3::after {
    width: 75%;
  }
}

/* DARK MODE */

.form-dark,
.form-dark div {
  border-color: #363636;
}
.form-dark h3,
.form-dark h4 {
  color: #a8a8a8;
}
.form-dark h3::after {
  background-color: #363636;
}

